5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1747_3087.log
== TEST (2019-05-16 10:31:37) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x!=0)and(x>0):
	if(x%2==0):
		spar = (spar + x)/2
		print(round(spar,2))
	elif(x%2==1):
		simp = (simp + x)/2
		print(round(simp,2))
	x = int(input("digite o numero inteiro"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:51) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x!=0)and(x>0):
	if(x%2==0):
		spar = (spar + x)/2
		print(round(spar,2))
	elif(x%2==1):
		simp = (simp + x)/2
		print(round(simp,2))
	x = int(input("digite o numero inteiro"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:11) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x>0):
	if(x%2==0):
		spar = (spar + x)/2
		print(round(spar,2))
	elif(x%2==1):
		simp = (simp + x)/2
		print(round(simp,2))
	x = int(input("digite o numero inteiro"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:18) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x>=0):
	if(x%2==0):
		spar = (spar + x)/2
		print(round(spar,2))
	elif(x%2==1):
		simp = (simp + x)/2
		print(round(simp,2))
	x = int(input("digite o numero inteiro"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r = input().upper
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:35) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x!=0):
	if(x%2==0):
		spar = (spar + x)/2
		print(round(spar,2))
	elif(x%2==1):
		simp = (simp + x)/2
		print(round(simp,2))
	x = int(input("digite o numero inteiro"))
-- OUTPUT:
-5.0
-6.5
-6.25
-5.12
-3.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:28) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
	elif(x%2==1):
		simp = simp + x
	x = int(input("digite o numero inteiro: "))
spar = spar/2
simp = simp/2
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-15.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:38:07) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
	elif(x%2!=0):
		simp = simp + x
	x = int(input("digite o numero inteiro: "))
spar = spar/2
simp = simp/2
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-15.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:54) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:40:52) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2==1):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:07) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2==1):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-5.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:44:34) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif((x*2 + 1)%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-5.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:44:53) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif((x*2 + 1)%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- EXECUTION TIME:
0.133376
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-5.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
2.0
4.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
1.11
0.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:24) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2==0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-5.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:48) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2==0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-5.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:02) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-5.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:31) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1 
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:33) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0)and(x!=0):
		spar = spar + x
		i = i + 1 
	elif(x%2!=0)and(x!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:51) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
if(x!=0):
	while(x!=0)
		if(x%2==0)and:
			spar = spar + x
			i = i -1
		elif(x%2!=0)and(x!=0):
			simp = simp + x
			i = i + 1 
			x = int(input("digite o numero inteiro: "))
	spar = spar/i
	simp = simp/i
	print(round(spar,2))
	print(round(simp,2))
-- ERROR:
File "XXXX", line 8
    while(x!=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:12) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
if(x!=0):
	while(x!=0):
		if(x%2==0)and:
			spar = spar + x
			i = i -1
		elif(x%2!=0)and(x!=0):
			simp = simp + x
			i = i + 1 
			x = int(input("digite o numero inteiro: "))
	spar = spar/i
	simp = simp/i
	print(round(spar,2))
	print(round(simp,2))
-- ERROR:
File "XXXX", line 9
    if(x%2==0)and:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:22) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
if(x!=0):
	while(x!=0):
		if(x%2==0):
			spar = spar + x
			i = i -1
		elif(x%2!=0)and(x!=0):
			simp = simp + x
			i = i + 1 
			x = int(input("digite o numero inteiro: "))
	spar = spar/i
	simp = simp/i
	print(round(spar,2))
	print(round(simp,2))
-- ERROR:
File "XXXX", line 9
    if(x%2==0)and:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:30) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 1
if(x!=0):
	while(x!=0):
		if(x%2==0):
			spar = spar + x
			i = i -1
		elif(x%2!=0):
			simp = simp + x
			i = i + 1 
			x = int(input("digite o numero inteiro: "))
	spar = spar/i
	simp = simp/i
	print(round(spar,2))
	print(round(simp,2))
-- ERROR:
File "XXXX", line 9
    if(x%2==0)and:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:36) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
if(x!=0):
	i = 0
	while(x!=0):
		if(x%2==0):
			spar = spar + x
			i = i -1
		elif(x%2!=0):
			simp = simp + x
			i = i + 1 
			x = int(input("digite o numero inteiro: "))
	spar = spar/i
	simp = simp/i
	print(round(spar,2))
	print(round(simp,2))
-- ERROR:
File "XXXX", line 9
    if(x%2==0)and:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:18) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
			x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- ERROR:
File "XXXX", line 14
    x = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:28) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:52:31) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- EXECUTION TIME:
0.25237
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-6.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
2.29
4.57
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
1.25
0.75
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:53:02) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
spar = spar/i
simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-6.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:54:13) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
if (x==0):
	i = i + 1
	spar = spar/i
	simp = simp/i
else:
	spar = spar/i
	simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- OUTPUT:
-5.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:54:18) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
i = 0
while(x!=0):
	if(x%2==0):
		spar = spar + x
		i = i + 1
	elif(x%2!=0):
		simp = simp + x
		i = i + 1 
	x = int(input("digite o numero inteiro: "))
if (x==0):
	i = i + 1
	spar = spar/i
	simp = simp/i
else:
	spar = spar/i
	simp = simp/i
print(round(spar,2))
print(round(simp,2))
-- EXECUTION TIME:
0.239435
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:
-5.0
0.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
2.0
4.0
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:
1.11
0.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:57:13) 
-- CODE:
#fazer terminar a soma digitando 0
#media dos numeros pares e a media dos numeros impares
x = int(input("digite o numero inteiro: "))
spar = 0
simp = 0
if(x!=0):
	i = 0
	while(x!=0):
		if(x%2==0):
			spar = spar + x
			i = i -1
		elif(x%2!=0):
			simp = simp + x
			i = i + 1 
			x = int(input("digite o numero inteiro: "))
	spar = spar/i
	simp = simp/i
	print(round(spar,2))
	print(round(simp,2))
-- EXECUTION TIME:
335.208
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
-6.0
0.0
---- user output:

-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
5.33
8.0
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1
1
1
3
2
2
2
4
0
---- correct output:
2.5
1.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
